--- a/app/templates/components/em-travis-badge.hbs
+++ b/app/templates/components/em-travis-badge.hbs
@@ -1,3 +1,5 @@
 {{#if github}}
-  {{img-wrap src=travisBadgeURL}}
+  <a href="{{unbound travisLinkURL}}" target="_blank">
+    {{img-wrap src=travisBadgeURL}}
+  </a>
 {{/if}}
