--- a/app/templates/packages/list.hbs
+++ b/app/templates/packages/list.hbs
@@ -39,20 +39,24 @@
                 UPDATED
               {{/em-sort-button}}
             </th>
-            <th class="hidden-xs">
-              TESTS
-            </th>
           </tr>
         </thead>
         <tbody>
-          {{#each model as |pkg|}}
+          {{#each currentPageContent as |pkg|}}
             {{em-pkg pkg=pkg query=query}}
           {{/each}}
-          {{#em-if-nothing-found signal=query}}
-            <td colspan="5">
+          {{#if nothingFound}}
+            <td colspan="4">
               <p class="not-found">Nothing found for "{{query}}"</p>
             </td>
-          {{/em-if-nothing-found}}
+          {{/if}}
+          <tr class="pagination-row">
+            <td colspan="4" class="pagination-cell">
+              <button {{bind-attr class=":pagination-link hasPreviousPage:enabled:disabled" disabled="previousDisabled"}} {{action 'previousPage'}}>Previous</button>
+
+              <button {{bind-attr class=":pagination-link hasNextPage:enabled:disabled" disabled="nextDisabled"}} {{action 'nextPage'}}>Next</button>
+            </td>
+          </tr>
         </tbody>
       </table>
     </div>
