fix back button

--- a/app/templates/packages/list.hbs
+++ b/app/templates/packages/list.hbs
@@ -4,10 +4,8 @@
       <div class="col-sm-12">
         {{input type="search"
         value=query
-        placeholder="Filter addons"
         class="form-control search-field"
-        autofocus="autofocus"
-        on="change"}}
+        key-press="resetPage"}}
       </div>
     </div>
   </div>
