fix search field

--- a/app/templates/packages/list.hbs
+++ b/app/templates/packages/list.hbs
@@ -4,7 +4,9 @@
       <div class="col-sm-12">
         {{input type="search"
         value=query
+        placeholder="Filter addons"
         class="form-control search-field"
+        autofocus="autofocus"
         key-press="resetPage"}}
       </div>
     </div>
