opens author page in new tab

--- a/app/templates/components/em-avatar.hbs
+++ b/app/templates/components/em-avatar.hbs
@@ -1,4 +1,4 @@
-<a href="{{unbound npmURL}}">
+<a href="{{unbound npmURL}}" target="_blank">
   <img src="{{unbound gravatar}}" class="gravatar">
 </a>
 {{em-owner-link user=user}}
