--- a/app/templates/packages/list.hbs
+++ b/app/templates/packages/list.hbs
@@ -44,12 +44,11 @@
         <tbody>
           {{#each currentPageContent as |pkg|}}
             {{em-pkg pkg=pkg}}
-          {{/each}}
-          {{#if nothingFound}}
+          {{else}}
             <td colspan="4">
               <p class="not-found">Nothing found for "{{query}}"</p>
             </td>
-          {{/if}}
+          {{/each}}
           <tr class="pagination-row">
             <td colspan="4" class="pagination-cell">
               <button
