fix time-ago display

--- a/app/templates/components/em-pkg.hbs
+++ b/app/templates/components/em-pkg.hbs
@@ -19,5 +19,5 @@
   {{unbound digit-grouping downloads}}
 </td>
 <td class="cell-updated hidden-xs">
-  {{unbound ago updated "LLLL"}}
+  {{unbound ago pkg.time.modified}}
 </td>
