--- a/app/templates/components/em-pkg.hbs
+++ b/app/templates/components/em-pkg.hbs
@@ -1,5 +1,5 @@
 <td class="cell-name">
-  <a href="{{unbound npmPackageURL}}"
+  <a href="https://npmjs.org/{{unbound pkg.name}}"
      target="_blank"
      class="package-link">{{unbound split-prefix pkg.name}}</a>
   {{#if isNew}}
@@ -10,8 +10,8 @@
   </div>
 </td>
 <td class="cell-gravatar hidden-xs">
-  <a href="{{unbound npmAuthorURL}}" target="_blank">
-    <img src="{{unbound gravatar}}" class="gravatar">
+  <a href="https://npmjs.org/~{{unbound user.name}}" target="_blank">
+    <img src="{{unbound user.gravatar}}?s=30&d=retro" class="gravatar">
     {{unbound user.name}}
   </a>
 </td>
