--- a/app/templates/packages/list.hbs
+++ b/app/templates/packages/list.hbs
@@ -19,17 +19,25 @@
       <table class="table table-packages">
         <thead>
           <tr>
-            <th {{action 'sortBy' 'name'}}>
-              NAME
+            <th>
+              <a href="#" {{action "sortBy" "name"}} class="sort-button">
+                NAME
+              </a>
             </th>
-            <th {{action 'sortBy' '_npmUser.name'}}>
-              OWNER
+            <th>
+              <a href="#" {{action "sortBy" "_npmUser.name"}} class="sort-button">
+                OWNER
+              </a>
             </th>
-            <th {{action 'sortBy' 'downloads.downloads'}}>
-              DOWNLOADS
+            <th>
+              <a href="#" {{action "sortBy" "downloads.downloads"}} class="sort-button">
+                DOWNLOADS
+              </a>
             </th>
-            <th {{action 'sortBy' 'time.modified'}}>
-              UPDATED
+            <th>
+              <a href="#" {{action "sortBy" "time.modiefied"}} class="sort-button">
+                UPDATED
+              </a>
             </th>
           </tr>
         </thead>
