--- a/app/templates/packages/list.hbs
+++ b/app/templates/packages/list.hbs
@@ -24,17 +24,17 @@
                 NAME
               </a>
             </th>
-            <th>
+            <th class="hidden-xs">
               <a href="#" {{action "sortBy" "_npmUser.name"}} class="sort-button">
                 OWNER
               </a>
             </th>
-            <th>
+            <th class="hidden-xs">
               <a href="#" {{action "sortBy" "downloads.downloads"}} class="sort-button">
                 DOWNLOADS
               </a>
             </th>
-            <th>
+            <th class="hidden-xs">
               <a href="#" {{action "sortBy" "time.modiefied"}} class="sort-button">
                 UPDATED
               </a>
