Fixes #46 - Sorting issue

--- a/app/templates/packages/list.hbs
+++ b/app/templates/packages/list.hbs
@@ -35,7 +35,7 @@
               </a>
             </th>
             <th class="hidden-xs">
-              <a href="#" {{action "sortBy" "time.modiefied"}} class="sort-button">
+              <a href="#" {{action "sortBy" "time.modified"}} class="sort-button">
                 UPDATED
               </a>
             </th>
