--- a/app/templates/packages/list.hbs
+++ b/app/templates/packages/list.hbs
@@ -30,8 +30,8 @@
               </a>
             </th>
             <th class="hidden-xs">
-              <a href="#" {{action "sortBy" "downloads.downloads"}} class="sort-button">
-                DOWNLOADS
+              <a href="#" {{action "sortBy" "emberObserverScore"}} class="sort-button" title="Ember Observer score">
+                SCORE
               </a>
             </th>
             <th class="hidden-xs">
