--- a/app/templates/components/em-pkg.hbs
+++ b/app/templates/components/em-pkg.hbs
@@ -18,7 +18,7 @@
   </a>
 </td>
 <td class="cell-downloads hidden-xs">
-  {{unbound digit-grouping downloads}}
+  {{observer-score score=pkg.emberObserverScore name=pkg.name}}
 </td>
 <td class="cell-updated hidden-xs">
   {{unbound ago pkg.time.modified}}
