--- a/app/templates/packages/list.hbs
+++ b/app/templates/packages/list.hbs
@@ -30,7 +30,7 @@
               </a>
             </th>
             <th class="hidden-xs">
-              <a href="#" {{action "sortBy" "emberObserverScore"}} class="sort-button" title="Ember Observer score">
+              <a href="#" {{action "sortBy" "emberObserver.score"}} class="sort-button" title="Ember Observer score">
                 SCORE
               </a>
             </th>
