Remove branding underline

--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -52,6 +52,12 @@ a span.name-prefix {
   color: white;
 }
 
+.branding a:hover,
+.branding a:active,
+.branding a:focus {
+  text-decoration: none;
+}
+
 .header-subtitle {
   color: #6b1210;
 }
