Replace packages/list view with em-pagination

--- a/app/templates/packages/list.hbs
+++ b/app/templates/packages/list.hbs
@@ -49,13 +49,14 @@
               <p class="not-found">Nothing found for "{{query}}"</p>
             </td>
           {{/each}}
-          <tr class="pagination-row">
-            <td colspan="4" class="pagination-cell">
-              <a class="btn pagination-link {{if hasPreviousPage 'enabled' 'disabled'}}" {{action 'previousPage'}}>Previous</a>
 
-              <a class="btn pagination-link {{if hasNextPage 'enabled' 'disabled'}}" {{action 'nextPage'}}>Next</a>
-            </td>
-          </tr>
+          {{em-pagination
+            list=sortedPackages
+            page=page
+            limit=limit
+            previous="previousPage"
+            next="nextPage"}}
+
         </tbody>
       </table>
     </div>
