--- a/app/templates/packages/list.hbs
+++ b/app/templates/packages/list.hbs
@@ -42,7 +42,7 @@
           </tr>
         </thead>
         <tbody>
-          {{#each currentPageContent key="id" as |pkg|}}
+          {{#each currentPageContent key="@guid" as |pkg|}}
             {{em-pkg pkg=pkg}}
           {{else}}
             <td colspan="4">
