--- a/app/templates/components/em-pkg.hbs
+++ b/app/templates/components/em-pkg.hbs
@@ -1,20 +1,29 @@
 <td class="cell-name">
-  <a href="https://www.npmjs.com/{{pkg.name}}"
-     target="_blank"
-     class="package-link">{{split-prefix pkg.name}}</a>
-  {{#if isNew}}
-    <div class="new-package">NEW</div>
+  {{#if hideInstallCommand}}
+    <a href="https://www.npmjs.com/{{pkg.name}}"
+       target="_blank"
+       class="package-link">{{split-prefix pkg.name}}</a>
+    {{#if isNew}}
+      <div class="new-package">NEW</div>
+    {{/if}}
+    {{#if hasDescription}}
+      <div class="description">
+        {{pkg.description}}
+      </div>
+    {{/if}}
+    {{#if pkg.demoURL}}
+      <div>
+        <a class="demo-link" href="{{unbound pkg.demoURL}}" target="_blank">DEMO</a>
+      </div>
+    {{/if}}
+  {{else}}
+    {{em-install-command package=pkg.name}}
   {{/if}}
-  {{#if hasDescription}}
-    <div class="description">
-      {{pkg.description}}
-    </div>
-  {{/if}}
-  {{#if pkg.demoURL}}
-    <div>
-      <a class="demo-link" href="{{unbound pkg.demoURL}}" target="_blank">DEMO</a>
-    </div>
-  {{/if}}
+</td>
+<td class="cell-clipboard hidden-xs">
+  <div hidden={{hideClipboard}} {{action 'displayInstallCommand'}}>
+    {{partial "clipboard"}}
+  </div>
 </td>
 <td class="cell-gravatar hidden-xs">
   <a href="https://www.npmjs.com/~{{user.name}}" target="_blank">
