--- a/app/templates/components/em-install-command.hbs
+++ b/app/templates/components/em-install-command.hbs
@@ -1,5 +1,4 @@
-{{yield}}
 <div class="install-command">
-  <input type="text" value="ember install {{package}}" autofocus="autofocus">
+  <input type="text" value="ember install {{package}}" autofocus="autofocus" class="install-command-input">
   <p>Press &#8984; or Ctrl + C to copy install command.</p>
 </div>
