Highlights input on click

--- a/app/templates/components/em-install-command.hbs
+++ b/app/templates/components/em-install-command.hbs
@@ -1,4 +1,4 @@
 <div class="install-command">
-  <input type="text" value="ember install {{package}}" autofocus="autofocus" class="install-command-input">
+  <input type="text" value="ember install {{package}}" autofocus="autofocus" class="install-command-input" onclick="this.select();">
   <p>Press &#8984; + C or Ctrl + C to copy install command.</p>
 </div>
