Hide new column headers on mobile

--- a/app/templates/packages/list.hbs
+++ b/app/templates/packages/list.hbs
@@ -24,8 +24,8 @@
                 NAME
               </a>
             </th>
-            <th></th>
-            <th></th>
+            <th class="hidden-xs"></th>
+            <th class="hidden-xs"></th>
             <th class="hidden-xs">
               <a href="#" {{action "sortBy" "_npmUser.name"}} class="sort-button">
                 OWNER
