--- a/app/templates/components/observer-score.hbs
+++ b/app/templates/components/observer-score.hbs
@@ -1,13 +1,13 @@
 {{#if isWIP}}
   <a href="http://emberobserver.com/addons/{{name}}" target="_blank">
-    <div class="score score--WIP" title="{{note}}">
+    <div class="score score--WIP" title="Click to see details on emberobserver.com.">
       WIP
     </div>
   </a>
 {{else}}
   {{#if score}}
     <a href="http://emberobserver.com/addons/{{name}}" target="_blank">
-      <div class="score score--s{{score}}" title="Scored [{{score}}] on Ember Observer">
+      <div class="score score--s{{score}}" title="Scored [{{score}}] on Ember Observer. Click for details.">
         {{score}}
       </div>
     </a>
