Add footer credit to Ember Observer

--- a/app/templates/-footer.hbs
+++ b/app/templates/-footer.hbs
@@ -6,7 +6,7 @@
       from
       <a href="http://blimp.io">Blimp</a>.<br>
       Contributions by the
-      <a href="https://github.com/gcollazo/ember-cli-addon-search/graphs/contributors">Ember.js community</a>.
+      <a href="https://github.com/gcollazo/ember-cli-addon-search/graphs/contributors">Ember.js community</a>. Scores from <a href="http://emberobserver.com">Ember Observer</a>.
     </div>
   </div>
 </div>
