--- a/app/templates/packages/loading.hbs
+++ b/app/templates/packages/loading.hbs
@@ -1,7 +1,25 @@
-<div class="container container-loading">
+<div class="container">
   <div class="row">
     <div class="col-sm-12">
-      <h3 class="loading">Loading modules...</h3>
+      <table class="table table-packages">
+        <thead>
+          {{partial "-table-header"}}
+        </thead>
+        <tbody>
+          {{partial "-placeholder-row"}}
+          {{partial "-placeholder-row"}}
+          {{partial "-placeholder-row"}}
+          {{partial "-placeholder-row"}}
+          {{partial "-placeholder-row"}}
+          {{partial "-placeholder-row"}}
+          {{partial "-placeholder-row"}}
+          {{partial "-placeholder-row"}}
+          {{partial "-placeholder-row"}}
+          {{partial "-placeholder-row"}}
+          {{partial "-placeholder-row"}}
+          {{partial "-placeholder-row"}}
+        </tbody>
+      </table>
     </div>
   </div>
 </div>
