Fix placeholders on mobile screens

--- a/app/templates/-placeholder-row.hbs
+++ b/app/templates/-placeholder-row.hbs
@@ -2,7 +2,7 @@
   <td class="cell-name">
     <div class="placeholder__pakcage-name"></div>
     <div class="placeholder__description-line"></div>
-    <div class="placeholder__description-line placeholder__description-line--second"></div>
+    <div class="placeholder__description-line"></div>
     <div class="placeholder__demo-button"></div>
   </td>
 
