Updates ember-moment version and helper.

--- a/app/templates/components/em-pkg.hbs
+++ b/app/templates/components/em-pkg.hbs
@@ -41,5 +41,5 @@
     name=pkg.name}}
 </td>
 <td class="cell-updated hidden-xs">
-  {{ago pkg.time.modified}}
+  {{moment-from-now pkg.time.modified}}
 </td>
