Adds pointer to clipboard

--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -129,7 +129,8 @@ input[type="search"]::-webkit-search-cancel-button {
 
 .clipboard {
   padding-top: 5px;
-  padding-left: 10px
+  padding-left: 10px;
+  cursor: pointer;
 }
 
 .github-logo {
