--- a/app/templates/packages/list.hbs
+++ b/app/templates/packages/list.hbs
@@ -1,17 +1,6 @@
-<div class="search-wrapper">
-  <div class="container">
-    <div class="row">
-      <div class="col-sm-12">
-        {{input type="search"
-        value=query
-        placeholder="Filter addons"
-        class="form-control search-field"
-        autofocus="autofocus"
-        key-press="resetPage"}}
-      </div>
-    </div>
-  </div>
-</div>
+{{em-header
+  packageCount=packageCount
+  query=query}}
 
 <div class="container">
   <div class="row">
