--- a/app/templates/components/em-header.hbs
+++ b/app/templates/components/em-header.hbs
@@ -20,9 +20,9 @@
         </div>
       {{/if}}
     </div>
-    <div class="col-sm-3 hidden-xs">
+    <div class="col-sm-3 col-sm-push-1 hidden-xs">
       <div class="top-menu-wrapper text-center">
-        <div class="col-sm-3">
+        <div class="col-sm-3 col-sm-push-1">
           <a href="https://github.com/gcollazo/ember-cli-addon-search" class="top-menu-link" target="_blank">
             {{fa-icon icon="github"}}
           </a>
@@ -30,11 +30,6 @@
         <div class="col-sm-3">
           <a href="http://feeds.feedburner.com/EmberAddons" class="top-menu-link" target="_blank">
             {{fa-icon icon="rss"}}
-          </a>
-        </div>
-        <div class="col-sm-3">
-          <a href="https://twitter.com/share" class="top-menu-link" data-url="http://emberaddons.com" data-text="Ember Addons: Listing thousands of addons that extend Ember.js and Ember CLI" data-related="BuiltWithEmber" data-count="none" data-hashtags="emberjs" target='_blank'>
-            {{fa-icon icon="twitter"}}
           </a>
         </div>
         <div class="col-sm-3">
