Fix icon positions

--- a/app/templates/components/em-header.hbs
+++ b/app/templates/components/em-header.hbs
@@ -22,7 +22,7 @@
     </div>
     <div class="col-sm-3 col-sm-push-1 hidden-xs">
       <div class="top-menu-wrapper text-center">
-        <div class="col-sm-3 col-sm-push-1">
+        <div class="col-sm-3">
           <a href="https://github.com/gcollazo/ember-cli-addon-search" class="top-menu-link" target="_blank">
             {{fa-icon icon="github"}}
           </a>
