Fix placeholder text in search component

--- a/app/templates/components/em-header.hbs
+++ b/app/templates/components/em-header.hbs
@@ -16,7 +16,7 @@
         key-press="resetPage"}}
       {{else}}
         <div class="search-wrapper">
-          <input type="text" placeholder="Filter addons" class="form-control search-field" disabled="disabled">
+          <input type="text" placeholder="Search addons" class="form-control search-field" disabled="disabled">
         </div>
       {{/if}}
     </div>
