Handle the input action in the component
I'm not sure how it worked before but now we fire an action inside the
component which we then wire up to the controllers action.

--- a/app/templates/components/em-header.hbs
+++ b/app/templates/components/em-header.hbs
@@ -13,7 +13,7 @@
         placeholder=placeholder
         class="form-control search-field"
         autofocus="autofocus"
-        key-press="resetPage"}}
+        key-press="resetPageCount"}}
       {{else}}
         <div class="search-wrapper">
           <input type="text" placeholder="Search addons" class="form-control search-field" disabled="disabled">
