--- a/app/templates/packages/list.hbs
+++ b/app/templates/packages/list.hbs
@@ -1,6 +1,8 @@
 {{em-header
   packageCount=packageCount
-  query=query}}
+  query=query
+  reset-page="resetPage"
+}}
 
 <div class="container">
   <div class="row">
