nmpjs.com links fix

--- a/app/templates/components/em-pkg.hbs
+++ b/app/templates/components/em-pkg.hbs
@@ -1,5 +1,5 @@
 <td class="cell-name">
-  <a href="https://www.npmjs.com/{{pkg.name}}"
+  <a href="https://www.npmjs.com/package/{{pkg.name}}"
      target="_blank"
      class="package-link">{{split-prefix pkg.name}}</a>
   {{#if isNew}}
