--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -159,6 +159,11 @@ a.sort-button {
 
 .package-link {
   font-size: 24px;
+  max-width: 100%;
+  height: 35px;
+  overflow: hidden;
+  display: inline-block;
+  word-break: break-all;
 }
 
 .new-package {
