Remove initialised hook in em-list component as performance looks to have improved

--- a/app/templates/packages/list.hbs
+++ b/app/templates/packages/list.hbs
@@ -1,7 +1,7 @@
 {{em-header
   packageCount=packageCount
   query=query
-  reset-page="resetPage"
+  reset-page=(action 'resetPage')
 }}
 
 <div class="container">
