Restructure hierarchy to prevent liquid-bind triggering an expensive re-sort operation - Nest all filter related properties under meta key

--- a/app/templates/packages/list.hbs
+++ b/app/templates/packages/list.hbs
@@ -8,19 +8,16 @@
   <div class="row">
     <div class="col-sm-12">
 
-      {{#liquid-bind page class="lf-slider" as |currentPage|}}
-        {{em-list
-          query=query
-          list=model
-          page=currentPage
-          limit=limit
-        }}
-      {{/liquid-bind}}
-
-      {{em-pagination
+      {{em-list
         list=model
-        page=page
-        limit=limit
+
+        meta=(hash 
+          query=query
+          page=page
+          limit=limit
+          packageCount=packageCount
+        )
+
         previous=(action 'previousPage')
         next=(action 'nextPage')
       }}
