Add title to pagination buttons

--- a/app/templates/components/em-pagination.hbs
+++ b/app/templates/components/em-pagination.hbs
@@ -1,2 +1,2 @@
-<a class="btn pagination-link {{if hasPreviousPage 'enabled' 'disabled'}}" {{action 'previousPage'}}>Previous</a>
-<a class="btn pagination-link {{if hasNextPage 'enabled' 'disabled'}}" {{action 'nextPage'}}>Next</a>
+<a class="btn pagination-link {{if hasPreviousPage 'enabled' 'disabled'}}" {{action 'previousPage'}} title="Press ◀️ on your keyboard">Previous</a>
+<a class="btn pagination-link {{if hasNextPage 'enabled' 'disabled'}}" {{action 'nextPage'}} title="Press ▶️ on your keyboard">Next</a>
