Update emberObserver score

--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -256,8 +256,8 @@ a.sort-button {
   border-radius: 3px;
 }
 
-.score--s,
-.score--WIP {
+.score--s-,
+.score--sWIP {
   background-color: #ACACAC;
 }
 
